# InvPlayer

./: .gitignore  README.md  meson.build
src/: application.vala  main.vala  meson.build  mpv.vapi  search-page.vala  video-player.vala
ui/: application-window.ui  invplayer_ui.gresources.xml  meson.build  search-page.ui  video-controls.css  video-controls.ui  video-player.ui
vapi/: epoxy.vapi  mpv.vapi
